# strange-loop

./: .gitignore  README.md  pyproject.toml
hgattn/: debug.py  funcs.py  jfuncs.py  logger.py  optim.py  opts.py  rand.py  sched.py  utils.py
hgattn/data/: __init__.py  arith.py  binding.py  copy_offset.py  copy_offset_old.py  iterator.py  melody.py  sampler.py  strided_count.py  types.py
hgattn/expt/: compare_hyper_vs_graph.py  givens_test.py  sing_speed.py  state_dict.py  tempo_invariant.py  test_dataset.py  test_melody_dataset.py  train_general.py  train_simple.py
hgattn/expt/opts/: compare_hyper_vs_graph.yaml  sing_speed.yaml  tempo_invariant.yaml  test_dataset.yaml  train_general.yaml
hgattn/expt/opts/arch/: gen_size1.yaml  gen_size2.yaml  gen_size3.yaml  simple.yaml
hgattn/expt/opts/attn/: gvonehot.yaml  gvonehotb.yaml  gvrand.yaml  gvrandb.yaml  rope.yaml
hgattn/expt/opts/data/: coff1.yaml  coff2.yaml  coff3.yaml  copy_offset.yaml  copy_offset1.yaml  copy_offset2.yaml  copy_offset3.yaml  melody.yaml
hgattn/expt/opts/debug/: d1.yaml
hgattn/expt/opts/embed/: coff.yaml  coffpos.yaml  std.yaml  stdpos.yaml
hgattn/expt/opts/logger/: streamvis.yaml
hgattn/expt/opts/models/: gen_size1.yaml  gen_size2.yaml  gen_size3.yaml  gen_small.yaml  simple.yaml
hgattn/expt/opts/models/embed/: first_n_mult.yaml  givens.yaml  rope.yaml  std.yaml
hgattn/expt/opts/optim/: adam.yaml
hgattn/expt/opts/sched/: reduce_on_plateau.yaml
hgattn/expt/opts/train/: 100k.yaml  10k.yaml  15k.yaml  30k.yaml  b64t.yaml  gradual.yaml  small.yaml
hgattn/layers/: __init__.py  attn.py  block.py  embed.py  ffn.py  givens_rotation.py  graph_attn.py
hgattn/models/: __init__.py  bertlike.py  generative.py  simple.py  types.py
