[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hgattn"]

[project]
name = "strange-loop-quest"
version = "0.1.0"
description = "Experiments to summon the Strange Loop"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet<6.0.0",
    "fire>=0.7.1",
    "hydra-core>=1.3.2",
    "music21>=9.9.1",
    "numpy>=2.4.2",
    "requests>=2.32.5",
    "rotary-embedding-torch>=0.8.9",
    "torch>=2.10.0",
    "urllib3<2.3.0",
]

[project.optional-dependencies]
cu124 = ["torch"]
cu130 = ["torch"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "extra == 'cu130'" },
  { index = "pytorch-cu124", marker = "extra == 'cu124' and extra != 'cu130'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

